----------
v6.1.6-git
----------

[mms] Fix regression in showing non-available actions in dynamic mailbox view
      when ACL rules prevent them (Bug #12808).


------
v6.1.5
------

[mms] SECURITY: Fix XSS in message and search screens resulting from a
      user-defined flag label (João Machado <geral@jpaulo.eu>).
[mms] Send linked attachment download notification message in language of the
      sending user (Bug #12783).
[mms] Fix populating search fields when editing an advanced search query.
[mms] Trigger auto save draft in dynamic view if attachments have changed.
[mms] Improved UI for dropping attachments on dynamic compose screen.
[mms] Fix manually loading all addresses in a header.
[mms] Fix regression where reloading dynamic view would not load the previously
      selected message.
[mms] Fixed regression in enforcing max_recipients and max_timelimit
      permissions (Bug #12674).
[mms] Correctly enforce file size attachment limits on the first attachment
      (Bug #12663).
[mms] Don't attempt to get quota information from non-IMAP mailboxes (Bug
      #12608).
[jan] Don't attach address book behavior if contacts API is unavailable.
[mms] Fix regression where MIME headers were being displayed for PGP decrypted
      messages (Bug #12648).
[mms] Improved error handling when creating a new flag in dynamic view.
[mms] Make addresses in smartmobile full message header display clickable to
      open a compose window.
[mms] Don't display empty containers in dynamic folder list (Request #11425).


------
v6.1.4
------

[mms] Fix auto-complete of addresses on the dynamic redirect page.
[mms] Fix updating flags in dynamic search view (Bug #12594).
[mms] Use Horde_Smtp to send messages via SMTP.
[mms] Fix applying the 'allow_folders' permission.
[mms] Fix canceling/discarding compose message in basic view (Bug #12555).
[mms] Fix updating message index when deleting a message in basic message view
      (Bug #12539).